// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`exportRuntimePack > produces expected runtime shape snapshot from starter pack 1`] = `
{
  "assets": [
    {
      "bpm": 90,
      "codec": "ogg",
      "durationMs": 16000,
      "id": "asset-explore-base",
      "key": "Am",
      "kind": "loop",
      "src": "audio/explore-base.ogg",
    },
    {
      "bpm": 90,
      "codec": "ogg",
      "durationMs": 16000,
      "id": "asset-explore-accent",
      "kind": "loop",
      "loopEndMs": 16000,
      "loopStartMs": 0,
      "src": "audio/explore-accent.ogg",
    },
    {
      "bpm": 110,
      "codec": "ogg",
      "durationMs": 8000,
      "id": "asset-tension-base",
      "key": "Dm",
      "kind": "loop",
      "src": "audio/tension-base.ogg",
    },
    {
      "bpm": 140,
      "codec": "ogg",
      "durationMs": 8000,
      "id": "asset-combat-base",
      "key": "Em",
      "kind": "loop",
      "src": "audio/combat-base.ogg",
    },
    {
      "bpm": 140,
      "codec": "ogg",
      "durationMs": 8000,
      "id": "asset-combat-danger",
      "kind": "loop",
      "src": "audio/combat-danger.ogg",
    },
    {
      "codec": "ogg",
      "durationMs": 4000,
      "id": "asset-victory-fanfare",
      "kind": "oneshot",
      "src": "audio/victory-fanfare.ogg",
    },
    {
      "codec": "ogg",
      "durationMs": 1500,
      "id": "asset-stinger-combat",
      "kind": "stinger",
      "src": "audio/stinger-combat.ogg",
    },
    {
      "codec": "ogg",
      "durationMs": 30000,
      "id": "asset-safe-ambient",
      "kind": "ambient",
      "src": "audio/safe-ambient.ogg",
      "tags": [
        "calm",
        "town",
      ],
    },
  ],
  "bindings": [
    {
      "conditions": [
        {
          "field": "mode",
          "op": "eq",
          "value": "exploration",
        },
      ],
      "id": "bind-explore",
      "priority": 0,
      "sceneId": "scene-exploration",
    },
    {
      "conditions": [
        {
          "field": "danger",
          "op": "gte",
          "value": 0.5,
        },
      ],
      "id": "bind-tension",
      "priority": 10,
      "sceneId": "scene-tension",
    },
    {
      "conditions": [
        {
          "field": "inCombat",
          "op": "eq",
          "value": true,
        },
      ],
      "id": "bind-combat",
      "priority": 20,
      "sceneId": "scene-combat",
    },
    {
      "conditions": [
        {
          "field": "victory",
          "op": "eq",
          "value": true,
        },
      ],
      "id": "bind-victory",
      "priority": 30,
      "sceneId": "scene-victory",
      "stopProcessing": true,
    },
    {
      "conditions": [
        {
          "field": "safeZone",
          "op": "eq",
          "value": true,
        },
      ],
      "id": "bind-safe",
      "priority": 5,
      "sceneId": "scene-safe-zone",
    },
  ],
  "meta": {
    "author": "motif",
    "description": "A basic exploration and combat soundtrack pack.",
    "id": "starter-pack",
    "name": "Starter Adventure Pack",
    "schemaVersion": "1",
    "tags": [
      "starter",
      "rpg",
    ],
    "version": "1.0.0",
  },
  "scenes": [
    {
      "category": "exploration",
      "fallbackSceneId": "scene-safe-zone",
      "id": "scene-exploration",
      "layers": [
        {
          "required": true,
          "startMode": "immediate",
          "stemId": "stem-explore-base",
        },
        {
          "startMode": "next-bar",
          "stemId": "stem-explore-accent",
        },
      ],
      "name": "Exploration",
      "tags": [
        "outdoor",
        "default",
      ],
    },
    {
      "category": "tension",
      "fallbackSceneId": "scene-exploration",
      "id": "scene-tension",
      "layers": [
        {
          "required": true,
          "stemId": "stem-tension-base",
        },
      ],
      "name": "Rising Tension",
    },
    {
      "category": "combat",
      "fallbackSceneId": "scene-tension",
      "id": "scene-combat",
      "layers": [
        {
          "required": true,
          "stemId": "stem-combat-base",
        },
        {
          "stemId": "stem-combat-danger",
        },
      ],
      "name": "Combat",
    },
    {
      "category": "victory",
      "fallbackSceneId": "scene-exploration",
      "id": "scene-victory",
      "layers": [
        {
          "required": true,
          "stemId": "stem-victory",
        },
      ],
      "name": "Victory",
    },
    {
      "category": "safe-zone",
      "id": "scene-safe-zone",
      "layers": [
        {
          "required": true,
          "stemId": "stem-safe-ambient",
        },
      ],
      "name": "Safe Zone",
      "tags": [
        "town",
        "rest",
      ],
    },
  ],
  "stems": [
    {
      "assetId": "asset-explore-base",
      "id": "stem-explore-base",
      "loop": true,
      "role": "base",
    },
    {
      "assetId": "asset-explore-accent",
      "gainDb": -3,
      "id": "stem-explore-accent",
      "loop": true,
      "mutedByDefault": true,
      "role": "accent",
    },
    {
      "assetId": "asset-tension-base",
      "id": "stem-tension-base",
      "loop": true,
      "role": "danger",
    },
    {
      "assetId": "asset-combat-base",
      "id": "stem-combat-base",
      "loop": true,
      "role": "combat",
    },
    {
      "assetId": "asset-combat-danger",
      "id": "stem-combat-danger",
      "loop": true,
      "mutedByDefault": true,
      "role": "danger",
    },
    {
      "assetId": "asset-victory-fanfare",
      "id": "stem-victory",
      "loop": false,
      "role": "recovery",
    },
    {
      "assetId": "asset-safe-ambient",
      "id": "stem-safe-ambient",
      "loop": true,
      "role": "base",
    },
  ],
  "transitions": [
    {
      "durationMs": 2000,
      "fromSceneId": "scene-exploration",
      "id": "trans-explore-to-tension",
      "mode": "crossfade",
      "toSceneId": "scene-tension",
    },
    {
      "durationMs": 1500,
      "fromSceneId": "scene-tension",
      "id": "trans-tension-to-combat",
      "mode": "stinger-then-switch",
      "stingerAssetId": "asset-stinger-combat",
      "toSceneId": "scene-combat",
    },
    {
      "fromSceneId": "scene-combat",
      "id": "trans-combat-to-victory",
      "mode": "immediate",
      "toSceneId": "scene-victory",
    },
    {
      "durationMs": 3000,
      "fromSceneId": "scene-victory",
      "id": "trans-victory-to-explore",
      "mode": "cooldown-fade",
      "toSceneId": "scene-exploration",
    },
  ],
}
`;

exports[`serializeRuntimePack > snapshot: serialized starter pack (without volatile stamps) 1`] = `
{
  "assets": [
    {
      "bpm": 90,
      "codec": "ogg",
      "durationMs": 16000,
      "id": "asset-explore-base",
      "key": "Am",
      "kind": "loop",
      "src": "audio/explore-base.ogg",
    },
    {
      "bpm": 90,
      "codec": "ogg",
      "durationMs": 16000,
      "id": "asset-explore-accent",
      "kind": "loop",
      "loopEndMs": 16000,
      "loopStartMs": 0,
      "src": "audio/explore-accent.ogg",
    },
    {
      "bpm": 110,
      "codec": "ogg",
      "durationMs": 8000,
      "id": "asset-tension-base",
      "key": "Dm",
      "kind": "loop",
      "src": "audio/tension-base.ogg",
    },
    {
      "bpm": 140,
      "codec": "ogg",
      "durationMs": 8000,
      "id": "asset-combat-base",
      "key": "Em",
      "kind": "loop",
      "src": "audio/combat-base.ogg",
    },
    {
      "bpm": 140,
      "codec": "ogg",
      "durationMs": 8000,
      "id": "asset-combat-danger",
      "kind": "loop",
      "src": "audio/combat-danger.ogg",
    },
    {
      "codec": "ogg",
      "durationMs": 4000,
      "id": "asset-victory-fanfare",
      "kind": "oneshot",
      "src": "audio/victory-fanfare.ogg",
    },
    {
      "codec": "ogg",
      "durationMs": 1500,
      "id": "asset-stinger-combat",
      "kind": "stinger",
      "src": "audio/stinger-combat.ogg",
    },
    {
      "codec": "ogg",
      "durationMs": 30000,
      "id": "asset-safe-ambient",
      "kind": "ambient",
      "src": "audio/safe-ambient.ogg",
      "tags": [
        "calm",
        "town",
      ],
    },
  ],
  "bindings": [
    {
      "conditions": [
        {
          "field": "mode",
          "op": "eq",
          "value": "exploration",
        },
      ],
      "id": "bind-explore",
      "priority": 0,
      "sceneId": "scene-exploration",
    },
    {
      "conditions": [
        {
          "field": "danger",
          "op": "gte",
          "value": 0.5,
        },
      ],
      "id": "bind-tension",
      "priority": 10,
      "sceneId": "scene-tension",
    },
    {
      "conditions": [
        {
          "field": "inCombat",
          "op": "eq",
          "value": true,
        },
      ],
      "id": "bind-combat",
      "priority": 20,
      "sceneId": "scene-combat",
    },
    {
      "conditions": [
        {
          "field": "victory",
          "op": "eq",
          "value": true,
        },
      ],
      "id": "bind-victory",
      "priority": 30,
      "sceneId": "scene-victory",
      "stopProcessing": true,
    },
    {
      "conditions": [
        {
          "field": "safeZone",
          "op": "eq",
          "value": true,
        },
      ],
      "id": "bind-safe",
      "priority": 5,
      "sceneId": "scene-safe-zone",
    },
  ],
  "meta": {
    "author": "motif",
    "contentHash": "f301a2fb",
    "description": "A basic exploration and combat soundtrack pack.",
    "id": "starter-pack",
    "name": "Starter Adventure Pack",
    "schemaVersion": "1",
    "tags": [
      "starter",
      "rpg",
    ],
    "version": "1.0.0",
  },
  "scenes": [
    {
      "category": "exploration",
      "fallbackSceneId": "scene-safe-zone",
      "id": "scene-exploration",
      "layers": [
        {
          "required": true,
          "startMode": "immediate",
          "stemId": "stem-explore-base",
        },
        {
          "startMode": "next-bar",
          "stemId": "stem-explore-accent",
        },
      ],
      "name": "Exploration",
      "tags": [
        "outdoor",
        "default",
      ],
    },
    {
      "category": "tension",
      "fallbackSceneId": "scene-exploration",
      "id": "scene-tension",
      "layers": [
        {
          "required": true,
          "stemId": "stem-tension-base",
        },
      ],
      "name": "Rising Tension",
    },
    {
      "category": "combat",
      "fallbackSceneId": "scene-tension",
      "id": "scene-combat",
      "layers": [
        {
          "required": true,
          "stemId": "stem-combat-base",
        },
        {
          "stemId": "stem-combat-danger",
        },
      ],
      "name": "Combat",
    },
    {
      "category": "victory",
      "fallbackSceneId": "scene-exploration",
      "id": "scene-victory",
      "layers": [
        {
          "required": true,
          "stemId": "stem-victory",
        },
      ],
      "name": "Victory",
    },
    {
      "category": "safe-zone",
      "id": "scene-safe-zone",
      "layers": [
        {
          "required": true,
          "stemId": "stem-safe-ambient",
        },
      ],
      "name": "Safe Zone",
      "tags": [
        "town",
        "rest",
      ],
    },
  ],
  "stems": [
    {
      "assetId": "asset-explore-base",
      "id": "stem-explore-base",
      "loop": true,
      "role": "base",
    },
    {
      "assetId": "asset-explore-accent",
      "gainDb": -3,
      "id": "stem-explore-accent",
      "loop": true,
      "mutedByDefault": true,
      "role": "accent",
    },
    {
      "assetId": "asset-tension-base",
      "id": "stem-tension-base",
      "loop": true,
      "role": "danger",
    },
    {
      "assetId": "asset-combat-base",
      "id": "stem-combat-base",
      "loop": true,
      "role": "combat",
    },
    {
      "assetId": "asset-combat-danger",
      "id": "stem-combat-danger",
      "loop": true,
      "mutedByDefault": true,
      "role": "danger",
    },
    {
      "assetId": "asset-victory-fanfare",
      "id": "stem-victory",
      "loop": false,
      "role": "recovery",
    },
    {
      "assetId": "asset-safe-ambient",
      "id": "stem-safe-ambient",
      "loop": true,
      "role": "base",
    },
  ],
  "transitions": [
    {
      "durationMs": 2000,
      "fromSceneId": "scene-exploration",
      "id": "trans-explore-to-tension",
      "mode": "crossfade",
      "toSceneId": "scene-tension",
    },
    {
      "durationMs": 1500,
      "fromSceneId": "scene-tension",
      "id": "trans-tension-to-combat",
      "mode": "stinger-then-switch",
      "stingerAssetId": "asset-stinger-combat",
      "toSceneId": "scene-combat",
    },
    {
      "fromSceneId": "scene-combat",
      "id": "trans-combat-to-victory",
      "mode": "immediate",
      "toSceneId": "scene-victory",
    },
    {
      "durationMs": 3000,
      "fromSceneId": "scene-victory",
      "id": "trans-victory-to-explore",
      "mode": "cooldown-fade",
      "toSceneId": "scene-exploration",
    },
  ],
}
`;
